Добавлено логирование Checkstyle